src/test/ui/feature-gates/feature-gate-main.rs
#[main]
fn foo() {} //~ ERROR: declaration of a nonstandard #[main] function may change over time
